# poke-battles

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  PLAN.md  README.md  models.yaml  pyproject.toml
.github/workflows/: build.yml  ci.yml  docker.yml
deploy/: docker-compose.yml
deploy/oci/: install.sh
docs/: frontend-auth-ui-todo.md
pokecli/: README.md  __init__.py  pyproject.toml
pokecli/src/pokecli/: __init__.py  __main__.py  pokecli.py
scripts/: ci.py
showdown/: Dockerfile
showdown-client/: Dockerfile  static-server.mjs
tests/: conftest.py
tests/integration/: test_sprite_coverage.py
tests/unit/: test_elo.py  test_formats.py  test_teams.py  test_type_chart.py  test_types.py
web/: .dockerignore  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.e2e.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
web/e2e/: fixtures.ts  screenshots.spec.ts
web/src/: App.tsx  api.ts  auth.tsx  battleView.test.ts  battleView.tsx  main.tsx  spriteDebugUtil.test.ts  spriteDebugUtil.ts  sprites.test.ts  sprites.tsx  styles.css  vite-env.d.ts
web/src/pages/: Battle.tsx  Dashboard.tsx  Leaderboard.tsx  Practice.tsx  Replays.tsx  SignIn.tsx  Simulations.tsx  SpriteDebug.test.ts  SpriteDebug.tsx  Teams.tsx
