[project]
name = "poke-battles"
version = "0.1.0"
description = "LLM-powered Pokémon Showdown agents, cloud-hosted"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pokecore",
    "pokeengine",
    "pokellm",
    "pokeapi",
    "pokecli",
]

[tool.uv]
managed = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
]

[tool.uv.workspace]
members = ["packages/*", "pokecli"]

[tool.uv.sources]
pokecore = { workspace = true }
pokeengine = { workspace = true }
pokellm = { workspace = true }
pokeapi = { workspace = true }
pokecli = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "build", "dist", "server", "client", "node_modules"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I", "N", "UP", "B", "C4", "SIM", "RUF",
    "ANN", "ASYNC", "S", "TID", "TCH",
    "Q", "RET",
    "ERA", "PIE",
]
ignore = [
    "E501",
    "S101",
    "S110",
    "B008",
    "ANN401",
    "SIM105",
    "ASYNC109",
    "B904",
    "TC002",
    "PLR2004",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR0917",
    "PLR1714",
    "PT011",
    "B905",
    "RUF059",
    "RUF002",
    "TC001",
    "TC003",
    "PLC0415",
    "UP047",
    "PLW2901",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S101", "PLR2004", "PLR0913"]
"packages/engine/src/**" = ["S603", "S607", "S311", "ASYNC109"]
"packages/api/src/**" = ["S311"]
"scripts/**" = ["S603", "S607"]

[tool.ruff.lint.isort]
known-first-party = ["pokecore", "pokellm", "pokeengine", "pokeapi"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_decorators = false
plugins = []
mypy_path = "packages/core/src"
namespace_packages = true
ignore_missing_imports = false
exclude = [
    "packages/engine/server/.*",
    "packages/engine/client/.*",
    "node_modules/.*",
    "showdown/.*",
    "showdown-client/.*",
]
enable_error_code = ["redundant-expr", "truthy-bool"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "poke_env.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests/unit", "packages/*/tests/unit"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
]

[tool.coverage.run]
branch = true
source = [
    "packages/core/src/pokecore",
    "packages/engine/src/pokeengine",
    "packages/llm/src/pokellm",
    "packages/api/src/pokeapi",
]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "packages/engine/src/pokeengine/demo.py",
    "packages/engine/src/pokeengine/smoke.py",
    "packages/engine/src/pokeengine/__main__.py",
    "packages/engine/src/pokeengine/runner.py",
    "packages/engine/src/pokeengine/player.py",
    "packages/llm/src/pokellm/clients.py",
    "packages/api/src/pokeapi/main.py",
    "packages/api/src/pokeapi/services/__init__.py",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]
