[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pokecli"
version = "0.1.0"
description = "CLI client for the poke-battles API"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27.0",
    "websockets>=12.0",
]

[tool.uv]
package = true

[project.scripts]
pokecli = "pokecli.pokecli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pokecli"]
